tests/errors/TypeMismatch.q
main() {
	f("Hello")
}

f(x int) -> int {
	return x
}